# Agents

./: .gitignore  pyproject.toml
1_modern_resume/: README.md  app.py  cv_chunk_list.pkl  github_code_extractor.py  project_knowledgbase_builder.py  requirements.txt
1_modern_resume/cv_knowledge_base/: EPA_Project.md  Machine-Learning_Supervised_Learning.md  Machine-Learning_Unsupervised_Learning.md  Open-Source-LLM-on-Colab.md  Self-Driving-Car_Image_Recognition.md  Self-Driving-Car_Machine_Leaning.md  about.md
1_modern_resume/cv_preprocessed_db/: chroma.sqlite3
1_modern_resume/implementation/: answer.py  ingest.py
1_modern_resume/me/: summary.txt
2_software_team/: create_roadmap.ipynb  product_agent.py  requirement_agent.py  roadmap_agent.py  technical_agent.py
3_debate_crew/debate/: pyproject.toml
3_debate_crew/debate/output/: decide.md  oppose.md  propose.md
3_debate_crew/debate/src/debate/: crew.py  main.py
3_debate_crew/debate/src/debate/config/: agents.yaml
4_coder_crew/coder/: pyproject.toml
4_coder_crew/coder/output/: code_and_output.md
4_coder_crew/coder/src/coder/: crew.py
4_coder_crew/coder/src/coder/config/: tasks.yaml
4_engineering_crew/engineering_team/: pyproject.toml
4_engineering_crew/engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
4_engineering_crew/engineering_team/src/engineering_team/: crew.py
