[project]
name = "coder"
version = "0.1.0"
description = "coder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "crewai[tools]==1.7.1",
    "email-validator>=2.3.0",
    "fastapi>=0.124.4",
    "fastapi-sso>=0.17.0",
    "litellm>=1.75.3",
]

[project.scripts]
coder = "coder.main:run"
run_crew = "coder.main:run"
train = "coder.main:train"
replay = "coder.main:replay"
test = "coder.main:test"
run_with_trigger = "coder.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
